--- a/exercise_3/paper/literature.bib
+++ b/exercise_3/paper/literature.bib
@@ -25,13 +25,19 @@
 }
 
 @misc{cats,
-  title = {KDEF \& AKDEF},
-  howpublished = {\url{https://www.kdef.se/}},
+  title = {Kaggle competition: Cat Dataset},
+  howpublished = {\url{https://www.kaggle.com/crawford/cat-dataset}},
   note = {Accessed: 2021-02-19}
 }
 
 @misc{dogs,
-  title = {KDEF \& AKDEF},
-  howpublished = {\url{https://www.kdef.se/}},
+  title = {Stanford Dogs Dataset},
+  howpublished = {http://vision.stanford.edu/aditya86/ImageNetDogs/}},
+  note = {Accessed: 2021-02-19}
+}
+
+@misc{coco,
+  title = {COCO},
+  howpublished = {https://cocodataset.org/\#download}},
   note = {Accessed: 2021-02-19}
 }
